--- a/src/app/pages/_layout/components/aside/aside.component.html
+++ b/src/app/pages/_layout/components/aside/aside.component.html
@@ -319,6 +319,17 @@
         </li>
         <!-- end::1 Level -->
     </ul>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+
+
+    <ul>
+      <button class="col-md-8 btn btn-warning" (click)="auditoria()">Auditoria</button>
+
+    </ul>
     <!-- end::Menu Nav -->
 
   </div>
