--- a/src/app/pages/reportes/customers/components/bloqueo-customer-modal/bloqueo-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/bloqueo-customer-modal/bloqueo-reserva-modal.component.html
@@ -11,7 +11,7 @@
     </div>
 </div>
 <!--(submit)="save(text.value); "-->
-<form (ngSubmit)="onFormSubmit(text.value)" class="form form-label-right"
+<form [formGroup]="bloqueoFormGroup" (ngSubmit)="onFormSubmit(text.value)" class="form form-label-right"
   style="background-color: #e6e9ed">
   <div class="cursor-default overlay overlay-block modal-body" style="background-color: #e6e9ed">
 
@@ -62,8 +62,6 @@
        <small> <label #contentPlaceholder  style="color: #fa6d7c; font-weight:bold">La fecha inicial no puede ser mayor que la fecha final seleccione otro rango de fechas para el bloqueo</label></small>
    </div>
 
-<form>
-
     <div class="row">
       <label style="color:#00506a; font-weight: bold;" class="form-label">Tipo de Habitación </label>
       <div class="col-lg-12">
@@ -96,14 +94,13 @@
           formControlName="numeroHab"
           placeholder="-- {{placeHolder}} -- ">
           <footer class="col-sm-12">
-            <button mat-raised-button class="col-sm-4 btn btn-primary">Confirmar</button>
-            <button (click)="selectedAll(true);" style="background-color: #319dd7;"  mat-raised-button class="col-sm-4 btn btn-success">Todas</button>
-            <button (click)="selectedAll(false);" style="background-color: #319dd7;"  mat-raised-button class="col-sm-4 btn btn-danger">Ninguna</button>
+            <button (click)="itemSelect.close()" mat-raised-button class="col-sm-4 btn btn-primary">Confirmar</button>
           </footer>
 
           <!-- <mat-option (click)="Allchecked($event)">Todos</mat-option> -->
             <div>
-              <mat-option #matOption (click)="cuartoValue(matOption.selected,matOption.value);" *ngFor="let numero of disponiblesIndexados" [value]="numero.selected">{{numero.value}}</mat-option>
+              <mat-option #allSelected (click)="toggleAllSelection()" [value]="0">Todos</mat-option>
+              <mat-option #matOption (click)="tosslePerOne(allSelected.viewValue);cuartoValue(matOption.selected,matOption.value);" [value]="numero.key" *ngFor="let numero of disponiblesIndexados" >{{numero.value}}</mat-option>
             </div>
           </mat-select>
          
@@ -121,7 +118,6 @@
         </mat-error>
       </div>
     </div>
-</form>
     <br>
     <div class="row">
       <label style="color:#00506a; font-weight: bold;" class="form-label">Restricciones:</label>
@@ -169,8 +165,11 @@
 
 
 <div style="background-color:#00506a;" class="modal-header">
+  <mat-error *ngIf="datosFaltantes && inicio==false">
+    <strong>*Faltan Datos po capturar</strong>
+  </mat-error>
   <div style="color: white; padding-top: 1%; padding-bottom: 1%;" class="text-center modal-title h5 col-12">
-    <button type="submit" style="background-color: #319dd7; color: white; font-weight: bold;" class="btn btn-block">GUARDAR BLOQUEO</button>
+    <button  type="submit" style="background-color: #319dd7; color: white; font-weight: bold;" class="btn btn-block">GUARDAR BLOQUEO</button>
   </div>
 </div>
 </form>
