--- a/src/app/pages/_layout/components/topbar/topbar.component.html
+++ b/src/app/pages/_layout/components/topbar/topbar.component.html
@@ -1,60 +1,47 @@
 <!--begin::Topbar-->
+
 <div class="topbar-item">
-  <div class="form-control" >
-    <!-- <label>{{parametrosService.getCurrentParametrosValue.codigoZona}} - {{parametrosService.getCurrentParametrosValue.zona}}
-    </label> -->
-    <button class="btn btn-warning" (click)="auditoria()">Auditoria</button>
+  <div class="" >
+    <label style="color: white; font-weight: bold;">Hoy es :&nbsp; </label>  <label style="color: #FAC34E;font-weight: bold;">{{todayString}} / {{horaString}} </label>
   </div>
 </div>
-<div class="topbar-item">
-  <div class="form-control" >
-    <!-- <label>{{parametrosService.getCurrentParametrosValue.codigoZona}} - {{parametrosService.getCurrentParametrosValue.zona}}
-    </label> -->
-    <label>{{fecha0}} - {{fecha1}}</label>
-  </div>
-</div>
-<div class="topbar-item">
-  <div class="form-control" >
-    <label>{{parametrosService.getCurrentParametrosValue.zona}}
-    </label>
-  </div>
-</div>
-<ng-container *ngIf="extraSearchDisplay">
+
+<!-- <ng-container *ngIf="extraSearchDisplay">
 
   <ng-container *ngIf="extrasSearchLayout === 'offcanvas'">
-    <!--begin::Search-->
+    begin::Search
     <div class="topbar-item">
       <div class="btn btn-icon btn-clean btn-lg mr-1" id="kt_quick_search_toggle">
         <span [inlineSVG]="'./assets/media/svg/icons/General/Search.svg'" cacheSVG="true"
           class="svg-icon svg-icon-xl svg-icon-primary"></span>
       </div>
     </div>
-    <!--end::Search-->
+    end::Search
   </ng-container>
 
   <ng-container *ngIf="extrasSearchLayout === 'dropdown'" id="kt_quick_search_toggle">
     <div class="dropdown" id="kt_quick_search_toggle" autoClose="outside" ngbDropdown>
-      <!--begin::Toggle-->
+      begin::Toggle
       <div class="topbar-item" ngbDropdownToggle>
         <div class="btn btn-icon btn-clean btn-lg btn-dropdown mr-1">
           <span [inlineSVG]="'./assets/media/svg/icons/General/Search.svg'" cacheSVG="true"
             class="svg-icon svg-icon-xl svg-icon-primary"></span>
         </div>
       </div>
-      <!--end::Toggle-->
+      end::Toggle
 
-      <!--begin::Dropdown-->
+      begin::Dropdown
       <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-lg" ngbDropdownMenu>
         <app-search-dropdown-inner></app-search-dropdown-inner>
       </div>
-      <!--end::Dropdown-->
+      end::Dropdown
     </div>
   </ng-container>
-</ng-container>
+</ng-container> -->
 
-<ng-container *ngIf="extrasNotificationsDisplay">
+<!-- <ng-container *ngIf="extrasNotificationsDisplay">
   <ng-container *ngIf="extrasNotificationsLayout === 'offcanvas'">
-    <!--begin::Notifications-->
+    egin::Notifications
     <div class="topbar-item">
       <div class="btn btn-icon btn-icon-mobile btn-clean btn-lg mr-1 pulse pulse-primary"
         id="kt_quick_notifications_toggle">
@@ -63,13 +50,13 @@
         <span class="pulse-ring"></span>
       </div>
     </div>
-    <!--end::Notifications-->
+    nd::Notifications
   </ng-container>
 
   <ng-container *ngIf="extrasNotificationsLayout === 'dropdown'">
-    <!--begin::Notifications-->
+    begin::Notifications
     <div class="dropdown" ngbDropdown placement="bottom">
-      <!--begin::Toggle-->
+      egin::Toggle
       <div class="topbar-item" data-toggle="dropdown" data-offset="10px,0px" ngbDropdownToggle>
         <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1 pulse pulse-primary">
           <span [inlineSVG]="'./assets/media/svg/icons/Code/Compiling.svg'" cacheSVG="true"
@@ -77,100 +64,100 @@
           <span class="pulse-ring"></span>
         </div>
       </div>
-      <!--end::Toggle-->
+      end::Toggle
 
-      <!--begin::Dropdown-->
+      begin::Dropdown
       <div ngbDropdownMenu class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-lg">
         <form>
           <app-notifications-dropdown-inner></app-notifications-dropdown-inner>
         </form>
       </div>
-      <!--end::Dropdown-->
+      nd::Dropdown
     </div>
-    <!--end::Notifications-->
+    nd::Notifications
   </ng-container>
 </ng-container>
 
 <ng-container *ngIf="extrasQuickActionsDisplay">
   <ng-container *ngIf="extrasQuickActionsLayout === 'offcanvas'">
-    <!--begin::Quick Actions-->
+    begin::Quick Actions
     <div class="topbar-item">
       <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1" id="kt_quick_actions_toggle">
         <span [inlineSVG]="'./assets/media/svg/icons/Media/Equalizer.svg'" cacheSVG="true"
           class="svg-icon svg-icon-xl svg-icon-primary"></span>
       </div>
     </div>
-    <!--end::Quick Actions-->
+    nd::Quick Actions
   </ng-container>
   <ng-container *ngIf="extrasQuickActionsLayout === 'dropdown'">
-    <!--begin::Quick Actions-->
+    begin::Quick Action
     <div class="dropdown" ngbDropdown placement="bottom">
-      <!--begin::Toggle-->
+      begin::Toggle
       <div class="topbar-item" data-toggle="dropdown" data-offset="10px,0px" ngbDropdownToggle>
         <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1">
           <span [inlineSVG]="'./assets/media/svg/icons/Media/Equalizer.svg'" cacheSVG="true"
             class="svg-icon svg-icon-xl svg-icon-primary"></span>
         </div>
       </div>
-      <!--end::Toggle-->
-      <!--begin::Dropdown-->
+      end::Toggle
+      egin::Dropdown
       <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-lg" ngbDropdownMenu>
         <app-quick-actions-dropdown-inner></app-quick-actions-dropdown-inner>
       </div>
-      <!--end::Dropdown-->
+      nd::Dropdown
     </div>
-    <!--end::Quick Actions-->
+    end::Quick Actions
   </ng-container>
 </ng-container>
 
 <ng-container *ngIf="extrasCartDisplay">
   <ng-container *ngIf="extrasCartLayout === 'offcanvas'">
-    <!--begin::Cart-->
+    begin::Cart
     <div class="topbar-item">
       <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1" id="kt_quick_cart_toggle">
         <span [inlineSVG]="'./assets/media/svg/icons/Shopping/Cart3.svg'" cacheSVG="true"
           class="svg-icon svg-icon-xl svg-icon-primary"></span>
       </div>
     </div>
-    <!--end::Cart-->
+    nd::Cart
   </ng-container>
   <ng-container *ngIf="extrasCartLayout === 'dropdown'">
-    <!--begin::Cart-->
+    begin::Cart
     <div class="dropdown" ngbDropdown placement="bottom">
-      <!--begin::Toggle-->
+      begin::Toggle
       <div class="topbar-item" data-toggle="dropdown" data-offset="10px,0px" ngbDropdownToggle>
         <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1">
           <span [inlineSVG]="'./assets/media/svg/icons/Shopping/Cart3.svg'" cacheSVG="true"
             class="svg-icon svg-icon-xl svg-icon-primary"></span>
         </div>
       </div>
-      <!--end::Toggle-->
-      <!--begin::Dropdown-->
+      <nd::Toggle
+      egin::Dropdown
       <div ngbDropdownMenu class="dropdown-menu p-0 m-0 dropdown-menu-xl dropdown-menu-anim-up">
         <form>
           <app-cart-dropdown-inner></app-cart-dropdown-inner>
         </form>
       </div>
-      <!--end::Dropdown-->
+      end::Dropdow
     </div>
-    <!--end::Cart-->
+    end::Car
   </ng-container>
 </ng-container>
 
 <ng-container *ngIf="extrasQuickPanelDisplay">
-  <!--begin::Quick panel-->
+  begin::Quick panel
   <div class="topbar-item">
     <div class="btn btn-icon btn-clean btn-lg mr-1" id="kt_quick_panel_toggle">
       <span [inlineSVG]="'./assets/media/svg/icons/Layout/Layout-4-blocks.svg'" cacheSVG="true"
         class="svg-icon svg-icon-xl svg-icon-primary"></span>
     </div>
   </div>
-  <!--end::Quick panel-->
+  end::Quick panel
 </ng-container>
 
 <ng-container *ngIf="extrasLanguagesDisplay">
   <app-language-selector style="margin-top: 10px;"></app-language-selector>
-</ng-container>
+</ng-container> -->
 
 <ng-container *ngIf="extrasUserDisplay">
   <ng-container *ngIf="extrasUserLayout === 'offcanvas'">
