--- a/src/app/pages/_layout/layout.component.html
+++ b/src/app/pages/_layout/layout.component.html
@@ -44,6 +44,7 @@
           id="kt_header"
           class="header"
           [ngClass]="headerCSSClasses"
+          style="background-color: rgba(34, 34, 143, 0.877);"
         ></app-header> 
         <!-- end:: Header -->
 
