--- a/src/app/pages/reportes/clientes/clientes.component.scss
+++ b/src/app/pages/reportes/clientes/clientes.component.scss
@@ -1,3 +1,22 @@
 .cdk-overlay-container, .cdk-overlay-pane {
     z-index: 9999 !important;
   }
+  
+
+  ngb-pagination ::ng-deep a {
+    color: black !important;
+  }
+  
+  ngb-pagination ::ng-deep .page-item.active .page-link {
+    border-color: black;
+    background-color: lightgrey;
+  }
+  
+  ngb-pagination ::ng-deep .page-item.active .page-link:focus, .page-link:not(:disabled):not(.disabled):active:focus {
+    box-shadow: 0 0 0 0.1rem dimgrey;
+  }
+  
+  ngb-pagination ::ng-deep .page-link:not(:disabled):not(.disabled):active:focus {
+    box-shadow: 0 0 0 0.1rem dimgrey;
+  }
+  
