--- a/src/app/pages/reportes/clientes/components/ver-folio/components/vista-cliente/vista-cliente.component.html
+++ b/src/app/pages/reportes/clientes/components/ver-folio/components/vista-cliente/vista-cliente.component.html
@@ -1,4 +1,6 @@
 
+<form [formGroup]="formGroup">
+
 <div class="cursor-default modal-content">
     <div class="row container">
         <div class="col-lg-6">
@@ -39,12 +41,13 @@
   </div>
 </div>
 <br>
+
 <div class="row container">
   <div class="col-lg-6">
     <label class="form-label">Email</label>
     <input
       type="email"
-      disabled
+      formControlName='emailPrincipal'
       class="form-control form-control-lg form-control-solid"
       name="email"
       autocomplete="off"
@@ -57,7 +60,7 @@
     <label class="form-label">Teléfono</label>
     <input
       type="tel"
-      disabled
+      formControlName='telefonoPrincipal'
       class="form-control form-control-lg form-control-solid"
       name="telefono"
       autocomplete="off"
@@ -75,7 +78,6 @@
     style="color: aliceblue; text-align: center; padding-top: 5px"
   >  Otros Detalles </label>
 </div>
-<form [formGroup]="formGroup">
 <div class="row container">
 <div class="col-lg-6">
   <br />
@@ -273,7 +275,7 @@
 <label
   class="h4"
   style="color: aliceblue; text-align: center; padding-top: 5px"
-> Notas Internas del historicoService.getCurrentClienteValue </label>
+> Notas Internas del {{historicoService.getCurrentClienteValue }}</label>
 </div>
 <br>
 <div class="row">
@@ -303,9 +305,9 @@
       </ng-container>
 
       <!-- Fecha Column -->
-      <ng-container matColumnDef="creada">
-        <th mat-header-cell  *matHeaderCellDef mat-sort-header> Creada </th>
-        <td mat-cell  *matCellDef="let row"> {{row.creada}} </td>
+      <ng-container matColumnDef="llegada">
+        <th mat-header-cell  *matHeaderCellDef mat-sort-header> Llegada </th>
+        <td mat-cell  *matCellDef="let row"> {{row.llegada}} </td>
       </ng-container>
 
       <!-- Noches Column -->
