--- a/src/app/pages/reportes/clientes/components/ver-folio/ver-folio.component.html
+++ b/src/app/pages/reportes/clientes/components/ver-folio/ver-folio.component.html
@@ -47,7 +47,7 @@
   
     <br />
     <!-- </div>  -->
-    <div class="row container">
+    <!-- <div class="row container">
       <div class="col-lg-12">
         <mat-select style="background-color: #fA6D7C;"
             [(value)]="selected"
@@ -66,8 +66,8 @@
         </mat-select>
       </div>
 
-    </div>
-  <br>
+    </div> 
+  <br>-->
 
  
   </div>
