--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/huesped/huesped-component/huesped-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/huesped/huesped-component/huesped-component.component.html
@@ -9,7 +9,6 @@ class="form form-label-right"
 <div class="row container">
 
   <div style="margin-top: 5px" class="col-sm-12">
-    <button [disabled]="!id_Socio" class="btn btn-secondary" [disabled]="id_Socio" (click)="getNumeroSocio()">GENERAR ID SOCIO</button>
     &nbsp;&nbsp;&nbsp;&nbsp;
     <label style="font-weight: bold;font-size: medium; "> &nbsp; ID Socio : </label>
     &nbsp;&nbsp;<label style="font-size: medium; font-weight: bold;" >&nbsp;{{huesped.ID_Socio}}</label>
@@ -34,8 +33,8 @@ class="form form-label-right"
     <div class="col-lg-12">
       <label class="form-label">Nombre Completo</label>
       <input
-        [disabled]="modifica"
-        type="text"
+      [attr.disabled]="inputDisabled"
+      type="text"
         class="form-control form-control-lg form-control-solid"
         name="nombre"
         autocomplete="off"
@@ -72,7 +71,7 @@ class="form form-label-right"
     <div class="col-lg-6">
       <label class="form-label">Email</label>
       <input
-        [disabled]="modifica"
+        [attr.disabled]="inputDisabled"
         type="email"
         class="form-control form-control-lg form-control-solid"
         name="email"
@@ -99,7 +98,7 @@ class="form form-label-right"
     <div class="col-lg-6">
       <label class="form-label">Teléfono</label>
       <input
-        [disabled]="modifica"
+        [attr.disabled]="inputDisabled"
         type="tel"
         class="form-control form-control-lg form-control-solid"
         name="telefono"
@@ -149,7 +148,9 @@ class="form form-label-right"
           [value]=todayString
           (dateSelect)="formatDate($event)">
           <div class="input-group-append">
-            <button class="btn btn-outline-secondary " (click)="d.toggle()" type="button">
+            <button
+            [attr.disabled]="inputDisabled" 
+            class="btn btn-outline-secondary " (click)="d.toggle()" type="button">
               <i class="fa fa-calendar icon"></i>
             </button>
           </div>
@@ -165,7 +166,7 @@ class="form form-label-right"
     <br />
     <label class="form-label">Trabaja En:</label>
     <input
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
       class="form-control form-control-lg form-control-solid"
       name="trabajaEn"
       autocomplete="off"
@@ -173,7 +174,7 @@ class="form form-label-right"
       [class.is-valid]="isControlValid('trabajaEn')"
       formControlName="trabajaEn"
       value="{{ huesped.trabajaEn }}"
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
     />
     <br />
     <div
@@ -195,7 +196,7 @@ class="form form-label-right"
     <br />
     <label class="form-label">Tipo de ID</label>
     <input
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
       class="form-control form-control-lg form-control-solid"
       name="tipoDeID"
       autocomplete="off"
@@ -203,7 +204,7 @@ class="form form-label-right"
       [class.is-valid]="isControlValid('tipoDeID')"
       formControlName="tipoDeID"
       value="{{ huesped.tipoDeID }}"
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
     />
     <br />
     <div
@@ -223,7 +224,7 @@ class="form form-label-right"
     <br />
     <label class="form-label">Numero de ID</label>
     <input
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
       class="form-control form-control-lg form-control-solid"
       name="numeroDeID"
       autocomplete="off"
@@ -231,7 +232,7 @@ class="form form-label-right"
       [class.is-valid]="isControlValid('numeroDeID')"
       formControlName="numeroDeID"
       value="{{ huesped.numeroDeID }}"
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
     />
     <br />
     <div
@@ -252,7 +253,7 @@ class="form form-label-right"
   <div class="col-lg-12">
     <label class="form-label">Dirección</label>
     <input
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
       type="text"
       class="form-control form-control-lg form-control-solid"
       name="direccion"
@@ -261,7 +262,7 @@ class="form form-label-right"
       [class.is-valid]="isControlValid('direccion')"
       formControlName="direccion"
       value="{{ huesped.direccion }}"
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
     />
     <div
       class="invalid-feedback"
@@ -282,7 +283,7 @@ class="form form-label-right"
     <br />
     <label class="form-label">País</label>
     <input
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
       class="form-control form-control-lg form-control-solid"
       name="pais"
       autocomplete="off"
@@ -290,7 +291,7 @@ class="form form-label-right"
       [class.is-valid]="isControlValid('pais')"
       formControlName="pais"
       value="{{ huesped.pais }}"
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
     />
     <br />
     <div
@@ -310,7 +311,7 @@ class="form form-label-right"
     <br />
     <label class="form-label">Ciudad</label>
     <input
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
       class="form-control form-control-lg form-control-solid"
       name="ciudad"
       autocomplete="off"
@@ -318,7 +319,7 @@ class="form form-label-right"
       [class.is-valid]="isControlValid('ciudad')"
       formControlName="ciudad"
       value="{{ huesped.ciudad }}"
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
     />
     <br />
     <div
@@ -340,7 +341,7 @@ class="form form-label-right"
     <br />
     <label class="form-label">Codigo Postal</label>
     <input
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
       class="form-control form-control-lg form-control-solid"
       name="codigoPostal"
       autocomplete="off"
@@ -348,7 +349,7 @@ class="form form-label-right"
       [class.is-valid]="isControlValid('codigoPostal')"
       formControlName="codigoPostal"
       value="{{ huesped.codigoPostal }}"
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
     />
     <br />
     <div
@@ -368,7 +369,7 @@ class="form form-label-right"
     <br />
     <label class="form-label">Lenguaje</label>
     <input
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
       class="form-control form-control-lg form-control-solid"
       name="lenguaje"
       autocomplete="off"
@@ -376,7 +377,7 @@ class="form form-label-right"
       [class.is-valid]="isControlValid('lenguaje')"
       formControlName="lenguaje"
       value="{{ huesped.lenguaje }}"
-      [disabled]="modifica"
+      [attr.disabled]="inputDisabled"
     />
     <br />
     <div
@@ -408,6 +409,7 @@ class="form form-label-right"
     <div class="col-lg-12">
       <label class="form-label">Nombre / Razon Social</label>
       <input
+      [attr.disabled]="inputDisabled"
         type="text"
         class="form-control form-control-lg form-control-solid"
         name="razonsocial"
@@ -427,6 +429,7 @@ class="form form-label-right"
     <div class="col-lg-12">
       <label class="form-label">RFC</label>
       <input
+      [attr.disabled]="inputDisabled"
         type="text"
         class="form-control form-control-lg form-control-solid"
         name="rfc"
@@ -448,6 +451,7 @@ class="form form-label-right"
     <div class="col-lg-6">
       <label class="form-label">EMAIL</label>
       <input
+      [attr.disabled]="inputDisabled"
         type="text"
         class="form-control form-control-lg form-control-solid"
         name="email"
@@ -467,7 +471,8 @@ class="form form-label-right"
     <label class="form-label">USO DE CFDI</label>
     <mat-form-field appearance="fill">
       <mat-label></mat-label>
-      <mat-select formControlName="cfdi" >
+      <mat-select [disabled]="inputDisabled"
+      formControlName="cfdi" >
         <mat-option *ngFor="let cfdi of cfdiList" [value]="cfdi">{{cfdi}}</mat-option>
       </mat-select>
     </mat-form-field>
@@ -482,7 +487,7 @@ class="form form-label-right"
  
   <div class="col-md-12">
     <button 
-    disabled
+    [attr.disabled]="inputDisabled"
     class="btn btn-primary btn-block">
       Actualizar Datos de Facturación
     </button>
@@ -503,7 +508,8 @@ class="form form-label-right"
 <br>
   <div class="row">
     <div style="text-align: center;" class="col-md-12">
-      <textarea formControlName="notas" style="border: 2px solid rgb(177, 177, 177)" class="form-control">           - NOTAS EXTRAS DEL CLIENTE</textarea>
+      <textarea             [attr.disabled]="inputDisabled"
+      formControlName="notas" style="border: 2px solid rgb(177, 177, 177)" class="form-control">           - NOTAS EXTRAS DEL CLIENTE</textarea>
     </div>
   </div>
   <br>
@@ -521,7 +527,8 @@ class="form form-label-right"
     (click)="formReset()">Cancelar</button>
   </div>
   <div class="col-md-6">
-    <button 
+    <button
+    [attr.disabled]="inputDisabled" 
     (click)="save()"
     class="btn btn-success btn-block">
       Actualizar y Guardar
