--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/transacciones/transacciones-component/transacciones-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/transacciones/transacciones-component/transacciones-component.component.html
@@ -16,8 +16,13 @@
     <div class="row col-md-12">
       <div class="col-md-12">
         <mat-form-field style=" width: 100%;" appearance="fill">
-         <mat-select style="text-align: center; font-weight: bold; color: black;" placeholder=" -- Seleccione Concepto -- " #conceptosAbono formControlName="concepto">
-          <mat-option (click)="nuevoConcepto();conceptosAbono.close()" ><button class="btn btn-primary">Agregar nuevo concepto <i class="fa fa-plus" aria-hidden="true"></i></button> <tr></tr></mat-option>
+         <mat-select [disabled]="inputDisabled" style="text-align: center; font-weight: bold; color: black;" placeholder=" -- Seleccione Concepto -- " #conceptosAbono formControlName="concepto">
+          <mat-option (click)="nuevoConcepto();conceptosAbono.close()" >
+            <button [attr.disabled]="inputDisabled" class="btn btn-primary">Agregar nuevo concepto 
+              <i class="fa fa-plus" aria-hidden="true"></i>
+            </button> 
+            <tr></tr>
+          </mat-option>
           <ng-container *ngFor="let concepto of codigosCargo">
             <mat-option (click)="selectedValue(concepto)" value={{concepto}}>{{concepto.Descripcion}}</mat-option>
           </ng-container>
@@ -42,6 +47,7 @@
         <div class="row col-md-12"> 
           <div class="col-sm-12">
             <input
+            [attr.disabled]="inputDisabled"
             type="text"
             class="form-control form-control-lg form-control-solid"
             name="nuevoConcepto"
@@ -59,6 +65,7 @@
           <div class="col-sm-6">
             <br>
             <input
+            [attr.disabled]="inputDisabled"
             type="number"
             class="form-control form-control-lg form-control-solid"
             name="nuevoPrecio"
@@ -75,12 +82,18 @@
             <br>
             <div class="input-group">
             <div class="input-group-append">
-              <button style="background-color: transparent; border-left: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;" class="btn btn-secondary" (click)="minusNinNva(nuevaCantidad.value)" type="button">
+              <button 
+              [attr.disabled]="inputDisabled"
+              style="background-color: transparent; border-left: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;" 
+              class="btn btn-secondary" 
+              (click)="minusNinNva(nuevaCantidad.value)" 
+              type="button">
                 <i class="fa fa-minus">
                 </i>
               </button>
             </div>
             <input
+            [attr.disabled]="inputDisabled"
             type="number"
             #nuevaCantidad
             style="background-color: #e6e9ed; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf; border-left: 2px solid #e6e9ed;"
@@ -95,7 +108,9 @@
             [value]="quantityNva"
           /> 
           <div class="input-group-append">
-            <button style="background-color: transparent; border-right: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;" class="btn btn-secondary" (click)="plusNinNva(nuevaCantidad.value);" type="button">
+            <button             
+            [attr.disabled]="inputDisabled"            
+            style="background-color: transparent; border-right: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;" class="btn btn-secondary" (click)="plusNinNva(nuevaCantidad.value);" type="button">
               <i class="fa fa-plus">
               </i>
             </button>
@@ -112,6 +127,7 @@
       <div class="row col-md-12">
         <div class="col-sm-6">
             <input
+            [attr.disabled]="inputDisabled"
             type="text"
             class="form-control form-control-lg form-control-solid"
             name="precio"
@@ -127,12 +143,18 @@
         <div class="col-sm-6">
           <div class="input-group">
             <div class="input-group-append">
-              <button style="background-color: transparent; border-left: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;" class="btn btn-secondary" (click)="minusNin(cantidad.value)" type="button">
+              <button 
+              [attr.disabled]="inputDisabled"
+              style="background-color: transparent; border-left: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;" 
+              class="btn btn-secondary" 
+              (click)="minusNin(cantidad.value)" 
+              type="button">
                 <i class="fa fa-minus">
                 </i>
               </button>
             </div>
                 <input
+                [attr.disabled]="inputDisabled"
                 #cantidad
                 type="number"
                 style="background-color: #e6e9ed; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf; border-left: 2px solid #e6e9ed;"
@@ -148,7 +170,12 @@
                 (change)="onChangeQty(cantidad.value)"
                 />
                 <div class="input-group-append">
-                 <button style="background-color: transparent; border-right: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;" class="btn btn-secondary" (click)="plusNin(cantidad.value)" type="button">
+                 <button 
+                 [attr.disabled]="inputDisabled"
+                 style="background-color: transparent; border-right: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;" 
+                 class="btn btn-secondary" 
+                 (click)="plusNin(cantidad.value)" 
+                 type="button">
                         <i class="fa fa-plus">
                         </i>
                   </button>
@@ -163,7 +190,7 @@
 
     <div class="col-lg-12">
         <button
-          [disabled]="isLoading"
+          [attr.disabled]="inputDisabled||isLoading"
           class="btn btn-primary btn-block"
           type="submit"
           name="estatus"
@@ -207,6 +234,7 @@
 
             <div class="col-sm-12">
               <input
+              [attr.disabled]="inputDisabled"
               type="text"
               class="form-control form-control-lg form-control-solid"
               name="conceptoManual"
@@ -221,8 +249,9 @@
       </div>
       <br>
   <div class="row col-md-12">
-      <div class="col-sm-5">
+      <div class="col-sm-4">
           <input
+          [attr.disabled]="inputDisabled"
           type="text"
           class="form-control form-control-lg form-control-solid"
           name="cantidadAbono"
@@ -234,14 +263,17 @@
           value=""
         />
       </div>
-      <div class="col-sm-2">
-        <button type="button" (click)="maxCantidad()" class="btn btn-danger">
+      <div class="col-sm-3">
+        <button 
+        [attr.disabled]="inputDisabled"
+        type="button" (click)="maxCantidad()" class="btn btn-danger">
           [Pendiente]
         </button>
       </div>
       
       <div class="col-sm-5">
               <input
+              [attr.disabled]="inputDisabled"
               #notaAbono
               type="text"
               class="form-control form-control-lg form-control-solid"
@@ -263,6 +295,7 @@
           <mat-form-field style="width: 100%;" appearance="fill">
               <mat-label>Forma de Pago</mat-label>
               <mat-select 
+              [disabled]="inputDisabled" 
               style="font-weight: bold;"
               formControlName="formaDePagoAbono">
                   <mat-option *ngFor="let pago of formasDePago" value={{pago}}>{{pago}}</mat-option>
@@ -276,7 +309,7 @@
   
       <div class="col-lg-12">
           <button
-            [disabled]="isLoading"
+            [attr.disabled]="isLoading||inputDisabled"
             class="btn btn-primary btn-block"
             type="submit"
             name="estatus"
@@ -321,6 +354,7 @@
       </div>
       <div class="col-sm-4"  >
         <input
+        [attr.disabled]="inputDisabled"
         type="text"
         class="form-control form-control-lg form-control-solid"
         name="qtyPrecio"
@@ -337,6 +371,7 @@
   <br>
   <div class="col-sm-12"  >
     <input
+    [attr.disabled]="inputDisabled"
     type="text"
     class="form-control form-control-lg form-control-solid"
     name="motivoDesc"
@@ -355,7 +390,7 @@
 <br>
 <div class="col-lg-12">
   <button           
-  [disabled]="descuentoButton"
+  [attr.disabled]="descuentoButton||inputDisabled"
   class="btn btn-success btn-block" 
   type="submit">
     Aplicar o Autorizar Descuento
