--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
@@ -13,7 +13,7 @@
 
 </div>
 <div class="cursor-default overlay overlay-block modal-body" style="background-color: #e6e9ed">
-<form (ngSubmit)="onSubmit(); customerServiceFetch()" [formGroup]="formGroup" class="form form-label-right" style="background-color: #e6e9ed">
+<form (ngSubmit)="  revisaClienteDistinguido(); customerServiceFetch()" [formGroup]="formGroup" class="form form-label-right" style="background-color: #e6e9ed">
 
 <div class="row">
   <div class="input-group col-lg-3">
@@ -300,51 +300,57 @@
           <label class="form-label" for="form1">&nbsp;&nbsp; &nbsp;Buscar Cliente</label>
           <input               class="form-control form-control-lg form-control-solid"          matInput (keyup)="applyFilter($event)" placeholder="" #input>
         </mat-form-field>
-        
-        <div class="table-responsive mat-elevation-z8">
-          <table mat-table [dataSource]="dataSource" matSort>
-        
-            <!-- ID Column -->
-            <ng-container matColumnDef="id_Socio">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> ID Socio</th>
-              <td mat-cell *matCellDef="let row"> {{row.id_Socio}} </td>
-            </ng-container>
-        
-            <!-- Progress Column -->
-            <ng-container matColumnDef="nombre">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
-              <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
-            </ng-container>
-        
-            <!-- Name Column -->
-            <ng-container matColumnDef="email">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-              <td mat-cell *matCellDef="let row"> {{row.email}} </td>
-            </ng-container>
 
-             <!-- Telefono Column -->
-             <ng-container matColumnDef="telefono">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Telèfono </th>
-              <td mat-cell *matCellDef="let row"> {{row.telefono}} </td>
-            </ng-container>
-        
-            <!-- Fruit Column -->
-            <!-- <ng-container matColumnDef="telefono">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Telèfono </th>
-              <td mat-cell *matCellDef="let row"> {{row.telefono}} </td>
-            </ng-container> -->
-        
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onSelectHuesped(row)"></tr>
-        
-            <!-- Row shown when there is no matching data. -->
-            <tr class="mat-row" *matNoDataRow>
-              <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-            </tr>
-          </table>
-        
-<!--           <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
- -->        </div>
+        <ng-container *ngIf="hiddenClienteTable">
+
+          <div class="table-responsive mat-elevation-z8">
+
+            <table  mat-table [dataSource]="dataSource" matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
+          
+              <!-- ID Column -->
+              <ng-container matColumnDef="id_Socio">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> ID Socio</th>
+                <td mat-cell *matCellDef="let row"> {{row.id_Socio}} </td>
+              </ng-container>
+          
+              <!-- Progress Column -->
+              <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+                <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
+              </ng-container>
+          
+              <!-- Name Column -->
+              <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+                <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+              </ng-container>
+  
+               <!-- Telefono Column -->
+               <ng-container matColumnDef="telefono">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Telèfono </th>
+                <td mat-cell *matCellDef="let row"> {{row.telefono}} </td>
+              </ng-container>
+          
+              <!-- Fruit Column -->
+              <!-- <ng-container matColumnDef="telefono">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Telèfono </th>
+                <td mat-cell *matCellDef="let row"> {{row.telefono}} </td>
+              </ng-container> -->
+          
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onSelectHuesped(row)"></tr>
+          
+              <!-- Row shown when there is no matching data. -->
+              <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+              </tr>
+            </table>
+            <!-- <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator> -->
+  
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+          </div>
+        </ng-container>
+       
         <!-- <div class="row">
           <label class="form-label" for="form1">&nbsp;&nbsp; &nbsp;Buscar Cliente</label>
           <div  class="text-center input-group col-lg-12">
@@ -471,7 +477,7 @@
           </div> -->
          <div class="valid-feedback" *ngIf="isControlValid('telefono')">
             Teléfono Escrito Correctamente
-          </div>-->
+          </div>
           <div
             class="invalid-feedback"
             *ngIf="controlHasError('minlength', 'telefono')"
